# note_template

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  README.zh-CN.md  README.zh-TW.md  docker-compose.yaml  mkdocs.yml  pyproject.toml
.github/: CONTRIBUTING.md  dependabot.yml
.github/agents/: update-repo.agent.md
.github/workflows/: auto_labeler.yml  build_image.yml  code-quality-check.yml  code_scan.yml  deploy.yml  pre-commit-updater.yml  release_drafter.yml
docker/: Dockerfile
docs/: index.md
