# ================== #
#        uv          #
# ================== #

[project]
name = "note_template"
version = "0.1.0"
description = "A note-taking repository template powered by Zensical + GitHub Pages"
authors = [
    { name = "Wei", email = "mai@mai0313.com" },
]
dependencies = [
    "zensical",
    "mkdocs-material",
    "mkdocstrings[python]",
    "markdown-exec[ansi]",
    "griffe-typingdoc",
    "mkdocs-autorefs",
    "mkdocs-awesome-pages-plugin",
    "mkdocs-git-revision-date-localized-plugin",
    "pymdown-extensions",
]
readme = "README.md"
requires-python = ">= 3.11"
license = { text = "MIT" }

[project.urls]
Homepage = "https://mai0313.github.io/note_template"
Repository = "https://github.com/Mai0313/note_template"

[dependency-groups]
dev = [
    "ipykernel",
    "ipywidgets",
    "notebook",
    "poethepoet",
    "pre-commit",
    "ty",
]

[tool.poe.tasks]
# Documentation
serve = "zensical serve"
build = "zensical build"

# https://docs.astral.sh/uv/reference/settings
[tool.uv]
managed = true
# Pure note repository — we do not build a Python package from this tree.
package = false
check-url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy/"
compile-bytecode = true
# concurrent-builds = 4
# concurrent-downloads = 4
# concurrent-installs = 4
index-strategy = "unsafe-best-match"
link-mode = "copy"
native-tls = true
no-binary = false
offline = false
prerelease = "if-necessary-or-explicit"
preview = true

# https://docs.astral.sh/uv/reference/settings/#index
[[tool.uv.index]]
name = "default"
url = "https://pypi.org/simple"
default = true

# [[tool.uv.index]]
# name = "pytorch"
# url = "https://download.pytorch.org/whl/cu118"

[tool.uv.pip]
universal = true
annotation-style = "line"
output-file = "requirements.txt"

# ================== #
#        RUFF        #
# ================== #
[tool.ruff]

# Enable preview features.
preview = true

# Enable Auto Fixing.
fix = true
unsafe-fixes = true

# Whether to automatically exclude files that are ignored by .ignore, .gitignore, .git/info/exclude, and global gitignore files. Enabled by default.
respect-gitignore = true

# Enumerate all fixed violations.
show-fixes = true

# In addition to the standard set of exclusions, omit all tests, plus a specific file.
extend-exclude = [
    "logs",
    "data",
    "site",
    "*.svg",
    "*.sql",
]

# In addition to the standard set of inclusions, include `.pyw` files.
extend-include = ["**/*.ipynb", "*.sh"]


# Set the cache directory to `logs/ruff_cache`.
cache-dir = "~/.cache/ruff"  # default: ".ruff_cache", now it is not allowed to create cache dir in logs

# Group violations by containing file.
# This is output message format; nothing about coding
# Type: "full" | "concise" | "grouped" | "json" | "junit" | "github" | "gitlab" | "pylint" | "azure"
output-format = "pylint"

# Same as Google Python Style Guide.
line-length = 99

[tool.ruff.analyze]
# Enable preview features.
preview = true
detect-string-imports = true
direction = "dependencies"


[tool.ruff.lint]
# Enable preview features.
preview = true

task-tags = ["TODO", "FIXME", "BUG", "XXX", "REFACT", "NOTE", "MARK", "HACK"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Allow autofix for all enabled rules (when `--fix`) is provided.
# Ref: https://beta.ruff.rs/docs/rules/#ruff-specific-rules-ruf
fixable = ["ALL"]
unfixable = ["T201", "F841"]

# Allow minus-sign (U+2212), greek-small-letter-rho (U+03C1), and the asterisk-operator (U+2217),
# which could be confused for "-", "p", and "*", respectively.
allowed-confusables = ["。", "，", "*", "；", "：", "、", "「", "」", "『", "』", "（", "）", "〔", "〕", "【", "】", "《", "》", "〈", "〉", "〖", "〗"]

# Require explicit selection of preview rules.
explicit-preview-rules = true

select = [
    "F",  # pyflakes
    "E", "W",  # pycodestyle
    "C90",  # mccabe
    "I",  # isort
    "N", # pep8-naming
    "D",  # pydocstyle
    "UP",  # pyupgrade
    # "YTT",  # flake8-2020
    "ANN",  # flake8-annotations
    "ASYNC",  # flake8-async
    "S",  # flake8-bandit
    # "BLE",  # flake8-blind-except
    # "FBT",  # flake8-boolean-trap
    "B",  # bugbear
    "A",  # flake8-builtins
    # "COM",  # flake8-commas
    # "CPY",  # flake8-copyright
    "C4",  # flake8-comprehensions
    # "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    # "DJ",  # flake8-django
    # "EM",  # flake8-errmsg
    "EXE",  # flake8-executable
    "FA",  # flake8-future-annotations
    # "ISC",  # flake8-implicit-str-concat
    # "ICN",  # flake8-import-conventions
    "LOG",  # flake8-logging
    # "G",  # flake8-logging-format
    "INP",  # flake8-no-pep420
    # "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PYI",  # flake8-pyi
    "PT",  # flake8-pytest-style
    "Q",  # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SLOT",  # flake8-slots
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TC",  # flake8-type-checking
    "INT",  # flake8-gettext
    # "ARG",  # flake8-unused-arguments
    # "PTH",  # flake8-use-pathlib
    # "TD",  # flake8-todos
    # "FIX",  # flake8-fixme
    # "ERA",  # eradicate
    "PD",  # pandas-vet
    # "PGH",  # pygrep-hooks
    "PL",  # Pylint
    # "TRY",  # tryceratops
    "FLY",  # flynt
    "NPY",  # NumPy-specific rules
    "FAST",  # FastAPI
    # "AIR",  # Airflow
    "PERF",  # Perflint
    # "FURB",  # refurb
    "DOC",  # pydoclint
    "RUF",  # Ruff Specific Rules
]

ignore = [
    # Additional ignore
    "E501",
    # Missing Docs in functions
    "D100", "D101", "D102", "D103", "D107", "D205", "D415",
    # Doc line too long
    "W505",
    # "N804",
    "E266",
    # No need annotation for `__init__`
    "ANN204",
    # no need timeout for requests
    "S113",
    # using async without await or async features.
    "RUF029",
    # Unnecessary assignment before `return` statement
    "RET504",
    # Use a list comprehension to create a transformed list
    "PERF401",
    # Use `list` or `list.copy` to create a copy of a list
    "PERF402",
    # constants ("magic") values in comparisons
    "PLR2004",
]

[tool.ruff.lint.pycodestyle]
# Ignore long comments for TODO, FIXME, XXX
ignore-overlong-task-comments = true
max-doc-length = 99
max-line-length = 99

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
# Accepts: "google", "numpy", or "pep257".
convention = "google"
ignore-decorators = []
property-decorators = []

[tool.ruff.lint.pyflakes]
extend-generics = ["pyrootutils", "autorootcwd", "autoroot"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]
"*.ipynb" = ["T201", "F401", "S105", "F811", "ANN", "PERF", "SLF"]

[tool.ruff.lint.isort]
case-sensitive = true
classes = []
combine-as-imports = false
constants = []
default-section = "third-party"
detect-same-package = true
extra-standard-library = []
force-single-line = false
force-sort-within-sections = true
force-to-top = []
force-wrap-aliases = false
forced-separate = []
from-first = false
known-first-party = []
known-local-folder = []
known-third-party = []
length-sort = true
length-sort-straight = true
lines-after-imports = -1
lines-between-types = 0
no-lines-before = ["future"]
no-sections = false
order-by-type = true
relative-imports-order = "furthest-to-closest"
required-imports = []
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
single-line-exclusions = []
split-on-trailing-comma=false
variables = []

[tool.ruff.lint.pylint]
allow-dunder-method-names = ["__tablename__", "__table_args__"]
allow-magic-value-types = ["int"]
max-args = 5
max-bool-expr = 5
max-branches = 12
max-public-methods = 20
max-returns = 6
max-statements = 50

[tool.ruff.format]
# Enable preview style formatting.
preview = true
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true
# Format all docstring code snippets with a line length of 60.
docstring-code-line-length = "dynamic"
exclude = ["generated"]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = true


# ================== #
#         ty         #
# ================== #
# https://docs.astral.sh/ty/reference/configuration/

# Configures the enabled rules and their severity.
# Keys are rule names or "all" to set a default for all rules.
# Valid values: "ignore" | "warn" | "error"
# Default: {}
# Full rule list: https://docs.astral.sh/ty/reference/rules/
[tool.ty.rules]
# --- error (default) ---
abstract-method-in-final-class        = "error"
assert-type-unspellable-subtype       = "error"
byte-string-type-annotation           = "error"
call-abstract-method                  = "error"
call-non-callable                     = "error"
call-top-callable                     = "error"
conflicting-argument-forms            = "error"
conflicting-declarations              = "error"
conflicting-metaclass                 = "error"
cyclic-class-definition               = "error"
cyclic-type-alias-definition          = "error"
dataclass-field-order                 = "error"
duplicate-base                        = "error"
duplicate-kw-only                     = "error"
empty-body                            = "error"
escape-character-in-forward-annotation = "error"
final-on-non-method                   = "error"
final-without-value                   = "error"
fstring-type-annotation               = "error"
implicit-concatenated-string-type-annotation = "error"
inconsistent-mro                      = "error"
index-out-of-bounds                   = "error"
instance-layout-conflict              = "error"
invalid-argument-type                 = "error"
invalid-assignment                    = "error"
invalid-attribute-access              = "error"
invalid-await                         = "error"
invalid-base                          = "error"
invalid-context-manager               = "error"
invalid-dataclass                     = "error"
invalid-dataclass-override            = "error"
invalid-declaration                   = "error"
invalid-exception-caught              = "error"
invalid-explicit-override             = "error"
invalid-frozen-dataclass-subclass     = "error"
invalid-generic-class                 = "error"
invalid-generic-enum                  = "error"
invalid-key                           = "error"
invalid-legacy-type-variable          = "error"
invalid-match-pattern                 = "error"
invalid-metaclass                     = "error"
invalid-method-override               = "error"
invalid-named-tuple                   = "error"
invalid-newtype                       = "error"
invalid-overload                      = "error"
invalid-parameter-default             = "error"
invalid-paramspec                     = "error"
invalid-protocol                      = "error"
invalid-raise                         = "error"
invalid-return-type                   = "error"
invalid-super-argument                = "error"
invalid-syntax-in-forward-annotation  = "error"
invalid-total-ordering                = "error"
invalid-type-alias-type               = "error"
invalid-type-arguments                = "error"
invalid-type-checking-constant        = "error"
invalid-type-form                     = "error"
invalid-type-guard-call               = "error"
invalid-type-guard-definition         = "error"
invalid-type-variable-bound           = "error"
invalid-type-variable-constraints     = "error"
invalid-type-variable-default         = "error"
invalid-typed-dict-header             = "error"
invalid-typed-dict-statement          = "error"
isinstance-against-protocol           = "error"
isinstance-against-typed-dict         = "error"
missing-argument                      = "error"
missing-typed-dict-key                = "error"
no-matching-overload                  = "error"
not-iterable                          = "error"
not-subscriptable                     = "error"
override-of-final-method              = "error"
override-of-final-variable            = "error"
parameter-already-assigned            = "error"
positional-only-parameter-as-kwarg    = "error"
raw-string-type-annotation            = "error"
shadowed-type-variable                = "error"
static-assert-error                   = "error"
subclass-of-final-class               = "error"
super-call-in-named-tuple-method      = "error"
too-many-positional-arguments         = "error"
type-assertion-failure                = "error"
unavailable-implicit-super-arguments  = "error"
unknown-argument                      = "error"
unresolved-attribute                  = "error"
unresolved-import                     = "error"
unresolved-reference                  = "error"
unsupported-bool-conversion           = "error"
unsupported-operator                  = "error"
zero-stepsize-in-slice                = "error"

# --- warn (default) ---
ambiguous-protocol-member             = "warn"
deprecated                            = "warn"
ignore-comment-unknown-rule           = "warn"
ineffective-final                     = "warn"
invalid-ignore-comment                = "warn"
invalid-legacy-positional-parameter   = "warn"
possibly-missing-attribute            = "warn"
possibly-missing-implicit-call        = "warn"
redundant-cast                        = "warn"
redundant-final-classvar              = "warn"
undefined-reveal                      = "warn"
unresolved-global                     = "warn"
unsupported-base                      = "warn"
unused-ignore-comment                 = "warn"
unused-type-ignore-comment            = "warn"
useless-overload-body                 = "warn"

# --- ignore (default, disabled by default due to false positives) ---
division-by-zero                      = "ignore"
possibly-missing-import               = "ignore"
possibly-unresolved-reference         = "ignore"
unsupported-dynamic-base              = "ignore"

# Analysis settings
[tool.ty.analysis]
# A list of module glob patterns for which `unresolved-import` diagnostics should be suppressed.
allowed-unresolved-imports = []

# A list of module glob patterns whose imports should be replaced with `typing.Any`.
replace-imports-with-any = []

# Whether ty should respect `type: ignore` comments.
respect-type-ignore-comments = true

# Environment settings
[tool.ty.environment]
# User-provided paths that should take first priority in module resolution.
extra-paths = []

# Path to your project's Python environment or interpreter.
# python = null  # e.g. ".venv/bin/python3" or ".venv"

# Specifies the target platform for analysis.
# python-platform = "<current-platform>"  # "win32" | "darwin" | "android" | "ios" | "linux" | "all"

# Specifies the version of Python used to analyze the source code.
# python-version = "3.11"

# The root paths of the project, used for finding first-party modules.
# root = null  # e.g. ["./src", "./lib"]

# Optional path to a custom typeshed directory.
# typeshed = null  # e.g. "/path/to/custom/typeshed"

# Source file settings
[tool.ty.src]
# A list of file/directory patterns to exclude from type checking.
# exclude = null  # e.g. ["generated", "*.proto"]

# A list of files and directories to check.
# include = null  # e.g. ["src", "tests"]

# Whether to automatically exclude files ignored by .ignore/.gitignore.
respect-ignore-files = true

# (Deprecated: use environment.root instead)
# root = null

# Terminal / output settings
[tool.ty.terminal]
# Use exit code 1 if there are any warning-level diagnostics.
error-on-warning = true

# The format used for printing diagnostic messages.
# "full" | "concise" | "github" | "gitlab" | "junit"
output-format = "concise"


# ================== #
#     CodeSpell      #
# ================== #

[tool.codespell]
skip = "pyproject.toml,uv.lock,site,docs/assets"
count = false
quiet-level = 3
# the correct one is Amoeba, but we use pronunciation in Chinese to name it.
ignore-words-list = ["ameba", "mke"]


# ================== #
#        Mypy        #
# ================== #

[tool.mypy]
plugins = ["pydantic.mypy"]
# strict = true
explicit_package_bases = true
cache_dir = "~/.cache/.mypy_cache"
exclude = ["^site/", "^docs/"]
ignore_missing_imports = true
warn_unused_configs = true
warn_return_any = false
warn_redundant_casts = true
warn_unused_ignores = true
disable_error_code = ["attr-defined", "prop-decorator"]
follow_imports = "silent"

# from https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
# no_implicit_reexport = true
# no_implicit_optional = true
# check_untyped_defs = true
# show_error_codes = true

# disallow_untyped_defs = true
# disallow_incomplete_defs = true
# disallow_any_generics = true
# disallow_untyped_decorators = true
# disallow_any_unimported = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = false
warn_untyped_fields = true
