# ================== #
#        uv          #
# ================== #

[project]
name = "note_template"
version = "0.1.0"
description = "A note-taking repository template powered by Zensical + GitHub Pages"
authors = [
    { name = "Wei", email = "mai@mai0313.com" },
]
dependencies = [
    "zensical",
    "mkdocs-material",
    "mkdocs-autorefs",
    "mkdocs-awesome-pages-plugin",
    "mkdocs-git-revision-date-localized-plugin",
    "pymdown-extensions",
]
readme = "README.md"
requires-python = ">= 3.11"
license = { text = "MIT" }

[project.urls]
Homepage = "https://mai0313.github.io/note_template"
Repository = "https://github.com/Mai0313/note_template"

# https://docs.astral.sh/uv/reference/settings
[tool.uv]
managed = true
# Pure note repository — we do not build a Python package from this tree.
package = false
check-url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy/"
compile-bytecode = true
# concurrent-builds = 4
# concurrent-downloads = 4
# concurrent-installs = 4
index-strategy = "unsafe-best-match"
link-mode = "copy"
native-tls = true
no-binary = false
offline = false
prerelease = "if-necessary-or-explicit"
preview = true

# https://docs.astral.sh/uv/reference/settings/#index
[[tool.uv.index]]
name = "default"
url = "https://pypi.org/simple"
default = true

# [[tool.uv.index]]
# name = "pytorch"
# url = "https://download.pytorch.org/whl/cu118"

[tool.uv.pip]
universal = true
annotation-style = "line"
output-file = "requirements.txt"


# ================== #
#     CodeSpell      #
# ================== #

[tool.codespell]
skip = "pyproject.toml,uv.lock,site,docs/assets"
count = false
quiet-level = 3
# the correct one is Amoeba, but we use pronunciation in Chinese to name it.
ignore-words-list = ["ameba", "mke"]
