# ================== #
#        uv          #
# ================== #

[project]
name = "note_template"
version = "0.1.0"
description = "A note-taking repository template powered by Zensical + GitHub Pages"
authors = [
    { name = "Wei", email = "mai@mai0313.com" },
]
dependencies = [
    "zensical",
    "mkdocs-material",
    "mkdocs-autorefs",
    "mkdocs-awesome-pages-plugin",
    "mkdocs-git-revision-date-localized-plugin",
    "pymdown-extensions",
]
readme = "README.md"
requires-python = ">= 3.11"
license = { text = "MIT" }

[project.urls]
Homepage = "https://mai0313.github.io/note_template"
Repository = "https://github.com/Mai0313/note_template"

# https://docs.astral.sh/uv/reference/settings
[tool.uv]
managed = true
# Pure documentation repository — we do not build a Python package from this tree.
package = false
check-url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy/"
compile-bytecode = true
# concurrent-builds = 4
# concurrent-downloads = 4
# concurrent-installs = 4
index-strategy = "unsafe-best-match"
link-mode = "copy"
native-tls = true
no-binary = false
offline = false
prerelease = "if-necessary-or-explicit"
preview = true

# https://docs.astral.sh/uv/reference/settings/#index
[[tool.uv.index]]
name = "default"
url = "https://pypi.org/simple"
default = true

# [[tool.uv.index]]
# name = "pytorch"
# url = "https://download.pytorch.org/whl/cu118"

[tool.uv.pip]
universal = true
annotation-style = "line"
output-file = "requirements.txt"


# ================== #
#        RUFF        #
# ================== #

[tool.ruff]

# Enable preview features.
preview = true

# Enable Auto Fixing.
fix = true
unsafe-fixes = true

# Whether to automatically exclude files that are ignored by .ignore, .gitignore, .git/info/exclude, and global gitignore files. Enabled by default.
respect-gitignore = true

# Enumerate all fixed violations.
show-fixes = true

# In addition to the standard set of exclusions, omit all tests, plus a specific file.
extend-exclude = [
    "logs",
    "data",
    "*.svg",
    "*.sql",
]

# In addition to the standard set of inclusions, include `.pyw` files.
extend-include = ["**/*.ipynb", "*.sh"]

# Allow imports relative to the "src" and "test" directories.
src = ["src", "tests"]

# Set the cache directory to `logs/ruff_cache`.
cache-dir = "~/.cache/ruff"  # default: ".ruff_cache", now it is not allowed to create cache dir in logs

# Group violations by containing file.
# This is output message format; nothing about coding
# Type: "full" | "concise" | "grouped" | "json" | "junit" | "github" | "gitlab" | "pylint" | "azure"
output-format = "pylint"

# Same as Google Python Style Guide.
line-length = 99

[tool.ruff.analyze]
# Enable preview features.
preview = true
detect-string-imports = true
direction = "dependencies"


[tool.ruff.lint]
# Enable preview features.
preview = true

task-tags = ["TODO", "FIXME", "BUG", "XXX", "REFACT", "NOTE", "MARK", "HACK"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Allow autofix for all enabled rules (when `--fix`) is provided.
# Ref: https://beta.ruff.rs/docs/rules/#ruff-specific-rules-ruf
fixable = ["ALL"]
unfixable = ["T201", "F841"]

# Allow minus-sign (U+2212), greek-small-letter-rho (U+03C1), and the asterisk-operator (U+2217),
# which could be confused for "-", "p", and "*", respectively.
allowed-confusables = ["。", "，", "*", "；", "：", "、", "「", "」", "『", "』", "（", "）", "〔", "〕", "【", "】", "《", "》", "〈", "〉", "〖", "〗"]

# Require explicit selection of preview rules.
explicit-preview-rules = true

select = [
    "F",  # pyflakes
    "E", "W",  # pycodestyle
    "C90",  # mccabe
    "I",  # isort
    "N", # pep8-naming
    "D",  # pydocstyle
    "UP",  # pyupgrade
    # "YTT",  # flake8-2020
    "ANN",  # flake8-annotations
    "ASYNC",  # flake8-async
    "S",  # flake8-bandit
    # "BLE",  # flake8-blind-except
    # "FBT",  # flake8-boolean-trap
    "B",  # bugbear
    "A",  # flake8-builtins
    # "COM",  # flake8-commas
    # "CPY",  # flake8-copyright
    "C4",  # flake8-comprehensions
    # "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    # "DJ",  # flake8-django
    # "EM",  # flake8-errmsg
    "EXE",  # flake8-executable
    "FA",  # flake8-future-annotations
    # "ISC",  # flake8-implicit-str-concat
    # "ICN",  # flake8-import-conventions
    "LOG",  # flake8-logging
    # "G",  # flake8-logging-format
    "INP",  # flake8-no-pep420
    # "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PYI",  # flake8-pyi
    "PT",  # flake8-pytest-style
    "Q",  # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SLOT",  # flake8-slots
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TC",  # flake8-type-checking
    "INT",  # flake8-gettext
    # "ARG",  # flake8-unused-arguments
    # "PTH",  # flake8-use-pathlib
    # "TD",  # flake8-todos
    # "FIX",  # flake8-fixme
    # "ERA",  # eradicate
    "PD",  # pandas-vet
    # "PGH",  # pygrep-hooks
    "PL",  # Pylint
    # "TRY",  # tryceratops
    "FLY",  # flynt
    "NPY",  # NumPy-specific rules
    "FAST",  # FastAPI
    # "AIR",  # Airflow
    "PERF",  # Perflint
    # "FURB",  # refurb
    "DOC",  # pydoclint
    "RUF",  # Ruff Specific Rules
]

ignore = [
    # Additional ignore
    "E501",
    # Missing Docs in functions
    "D100", "D101", "D102", "D103", "D107", "D205", "D415",
    # Doc line too long
    "W505",
    # "N804",
    "E266",
    # No need annotation for `__init__`
    "ANN204",
    # no need timeout for requests
    "S113",
    # using async without await or async features.
    "RUF029",
    # Unnecessary assignment before `return` statement
    "RET504",
    # Use a list comprehension to create a transformed list
    "PERF401",
    # Use `list` or `list.copy` to create a copy of a list
    "PERF402",
    # constants ("magic") values in comparisons
    "PLR2004",
]

[tool.ruff.lint.pycodestyle]
# Ignore long comments for TODO, FIXME, XXX
ignore-overlong-task-comments = true
max-doc-length = 99
max-line-length = 99

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
# Accepts: "google", "numpy", or "pep257".
convention = "google"
ignore-decorators = []
property-decorators = []

[tool.ruff.lint.pyflakes]
extend-generics = ["pyrootutils", "autorootcwd", "autoroot"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]
"*.ipynb" = ["T201", "F401", "S105", "F811", "ANN", "PERF", "SLF"]
"tests/*" = ["S101", "SLF001"]
"notebooks/*.ipynb" = ["UP", "DOC", "RUF", "D", "C", "F401", "T201"]
"examples/*.py" = ["UP", "DOC", "RUF", "D", "C", "F401", "T201"]

[tool.ruff.lint.isort]
case-sensitive = true
classes = []
combine-as-imports = false
constants = []
default-section = "third-party"
detect-same-package = true
extra-standard-library = []
force-single-line = false
force-sort-within-sections = true
force-to-top = []
force-wrap-aliases = false
forced-separate = ["tests"]
from-first = false
known-first-party = ["src", "tests"]
known-local-folder = []
known-third-party = []
length-sort = true
length-sort-straight = true
lines-after-imports = -1
lines-between-types = 0
no-lines-before = ["future"]
no-sections = false
order-by-type = true
relative-imports-order = "furthest-to-closest"
required-imports = []
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
single-line-exclusions = []
split-on-trailing-comma=false
variables = []

[tool.ruff.lint.pylint]
allow-dunder-method-names = ["__tablename__", "__table_args__"]
allow-magic-value-types = ["int"]
max-args = 5
max-bool-expr = 5
max-branches = 12
max-public-methods = 20
max-returns = 6
max-statements = 50

[tool.ruff.format]
# Enable preview style formatting.
preview = true
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true
# Format all docstring code snippets with a line length of 60.
docstring-code-line-length = "dynamic"
exclude = ["generated"]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = true


# ================== #
#     CodeSpell      #
# ================== #

[tool.codespell]
skip = "pyproject.toml,poetry.lock,notebook/.*,uv.lock,site,docs/assets"
count = false
quiet-level = 3
# the correct one is Amoeba, but we use pronunciation in Chinese to name it.
ignore-words-list = ["ameba", "mke"]
